Style: fix wrong font-family attribute.

--- a/src/scss/main/_typography.scss
+++ b/src/scss/main/_typography.scss
@@ -21,7 +21,7 @@ html {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: $font-family-header;
+  font-family: $font-family-text;
   font-weight: normal;
 }
 
@@ -59,7 +59,7 @@ a {
 
   &.top {
     font-size: 26px; 
-    font-family: Kelson Sans;
+    font-family: $font-family-text;
   }
 }
 
